--- a/jobs/routing-api/templates/routing-api_ctl.erb
+++ b/jobs/routing-api/templates/routing-api_ctl.erb
@@ -29,9 +29,7 @@ case $1 in
          -config /var/vcap/jobs/routing-api/config/routing-api.yml \
          -port <%= p("routing-api.port") %> \
          -maxTTL <%= p("routing-api.max_ttl") %> \
-         <%= p("etcd.machines").map{|addr| "http://#{addr}:4001"}.join(" ")%> \
-         2>> $LOG_DIR/routing-api.stderr.log \
-         1> >(tee -a $LOG_DIR/routing-api.stdout.log | logger -t vcap.routing-api)
+         <%= p("etcd.machines").map{|addr| "http://#{addr}:4001"}.join(" ")%>
 
     ;;
 
