--- a/spec/fixtures/aws/cf-manifest.yml.erb
+++ b/spec/fixtures/aws/cf-manifest.yml.erb
@@ -749,7 +749,7 @@ properties:
     default_to_diego_backend: false
     development_mode: false
     diego_docker: false
-    allow_app_ssh_access: true
+    allow_app_ssh_access: false
     directories: null
     disable_custom_buildpacks: false
     droplets:
