--- a/spec/fixtures/warden/cf-manifest.yml.erb
+++ b/spec/fixtures/warden/cf-manifest.yml.erb
@@ -2393,7 +2393,7 @@ properties:
     nodes: 1
     skip_ssl_validation: true
     system_domain: 10.244.0.34.xip.io
-    oauth_password: gorouter-secret
+    client_secret: gorouter-secret
     include_routing_api: true
   app_ssh: null
   app_domains:
