--- a/spec/fixtures/openstack/cf-manifest.yml.erb
+++ b/spec/fixtures/openstack/cf-manifest.yml.erb
@@ -285,9 +285,15 @@ jobs:
       - null
       - null
       share: null
+    route_registrar:
+      routes:
+        "9022":
+        - api.example.com
   resource_pool: large_z1
   templates:
   - name: cloud_controller_ng
+    release: cf
+  - name: route_registrar
     release: cf
   - name: routing-api
     release: cf
@@ -321,9 +327,15 @@ jobs:
       - null
       - null
       share: null
+    route_registrar:
+      routes:
+        "9022":
+        - api.example.com
   resource_pool: large_z2
   templates:
   - name: cloud_controller_ng
+    release: cf
+  - name: route_registrar
     release: cf
   - name: routing-api
     release: cf
@@ -968,6 +980,10 @@ properties:
     - null
     share: null
   request_timeout_in_seconds: 900
+  route_registrar:
+    api_endpoint: http://routing-api.example.com
+    api_password: gorouter_secret
+    api_username: gorouter
   router:
     enable_ssl: true
     ssl_cert: |
@@ -1096,6 +1112,7 @@ properties:
     no_ssl: false
     require_https: ~
     restricted_ips_regex: 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}
+    protocol: https
     scim:
       external_groups: null
       userids_enabled: true
