--- a/spec/fixtures/warden/cf-manifest.yml.erb
+++ b/spec/fixtures/warden/cf-manifest.yml.erb
@@ -326,6 +326,10 @@ jobs:
       - 10.244.0.0/30
       - 10.244.2.0/30
       share: null
+    route_registrar:
+      routes:
+        "9022":
+        - api.10.244.0.34.xip.io
   resource_pool: large_z1
   templates:
   - name: cloud_controller_ng
@@ -333,6 +337,8 @@ jobs:
   - name: cloud_controller_clock
     release: cf
   - name: cloud_controller_worker
+    release: cf
+  - name: route_registrar
     release: cf
   - name: routing-api
     release: cf
@@ -366,9 +372,15 @@ jobs:
       - 10.244.0.0/30
       - 10.244.2.0/30
       share: null
+    route_registrar:
+      routes:
+        "9022":
+        - api.10.244.0.34.xip.io
   resource_pool: large_z2
   templates:
   - name: cloud_controller_ng
+    release: cf
+  - name: route_registrar
     release: cf
   - name: routing-api
     release: cf
@@ -2862,6 +2874,10 @@ properties:
     - 10.244.2.0/30
     share: null
   request_timeout_in_seconds: 900
+  route_registrar:
+    api_endpoint: http://routing-api.10.244.0.34.xip.io
+    api_password: gorouter-secret
+    api_username: gorouter
   router:
     enable_ssl: true
     ssl_cert: |
@@ -3000,7 +3016,7 @@ properties:
         scope: openid,cloud_controller_service_permissions.read
         secret: gorouter-secret
     database: null
-    issuer: https://uaa.10.244.0.34.xip.io
+    issuer: http://uaa.10.244.0.34.xip.io
     jwt:
       signing_key: '-----BEGIN RSA PRIVATE KEY-----
 
@@ -3092,13 +3108,14 @@ properties:
     no_ssl: true
     require_https: ~
     restricted_ips_regex: 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}
+    protocol: http
     scim:
       external_groups: null
       userids_enabled: true
       users:
       - admin|admin|scim.write,scim.read,openid,cloud_controller.admin,clients.read,clients.write,doppler.firehose
     spring_profiles: null
-    url: https://uaa.10.244.0.34.xip.io
+    url: http://uaa.10.244.0.34.xip.io
     user: null
     zones:
       internal:
