--- a/spec/fixtures/warden/cf-manifest.yml.erb
+++ b/spec/fixtures/warden/cf-manifest.yml.erb
@@ -262,6 +262,53 @@ jobs:
     release: cf
   update: {}
 - instances: 1
+  name: router_z1
+  networks:
+  - name: cf1
+    static_ips:
+    - 10.244.0.22
+  properties:
+    consul:
+      agent:
+        services:
+          gorouter: {}
+    metron_agent:
+      zone: z1
+    networks:
+      apps: cf1
+  resource_pool: router_z1
+  templates:
+  - name: gorouter
+    release: cf
+  - name: metron_agent
+    release: cf
+  - name: consul_agent
+    release: cf
+  update: {}
+- instances: 0
+  name: router_z2
+  networks:
+  - name: cf2
+    static_ips: []
+  properties:
+    consul:
+      agent:
+        services:
+          gorouter: {}
+    metron_agent:
+      zone: z2
+    networks:
+      apps: cf2
+  resource_pool: router_z2
+  templates:
+  - name: gorouter
+    release: cf
+  - name: metron_agent
+    release: cf
+  - name: consul_agent
+    release: cf
+  update: {}
+- instances: 1
   name: uaa_z1
   networks:
   - name: cf1
@@ -3016,7 +3063,7 @@ properties:
         scope: openid,cloud_controller_service_permissions.read
         secret: gorouter-secret
     database: null
-    issuer: http://uaa.10.244.0.34.xip.io
+    issuer: https://uaa.10.244.0.34.xip.io
     jwt:
       signing_key: '-----BEGIN RSA PRIVATE KEY-----
 
@@ -3108,14 +3155,13 @@ properties:
     no_ssl: true
     require_https: ~
     restricted_ips_regex: 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}
-    protocol: http
     scim:
       external_groups: null
       userids_enabled: true
       users:
       - admin|admin|scim.write,scim.read,openid,cloud_controller.admin,clients.read,clients.write,doppler.firehose
     spring_profiles: null
-    url: http://uaa.10.244.0.34.xip.io
+    url: https://uaa.10.244.0.34.xip.io
     user: null
     zones:
       internal:
