--- a/jobs/consul_agent/templates/config.json.erb
+++ b/jobs/consul_agent/templates/config.json.erb
@@ -49,7 +49,28 @@
     "disable_remote_exec" => true,
     "disable_update_check" => true,
     "protocol" => p("consul.agent.protocol_version"),
-  }
+}
+
+if p("consul.require_ssl")
+  certs_dir = "/var/vcap/jobs/consul_agent/config/certs"
+  if server
+    key_file = "#{certs_dir}/server.key"
+    cert_file = "#{certs_dir}/server.crt"
+  else
+    key_file = "#{certs_dir}/agent.key"
+    cert_file = "#{certs_dir}/agent.crt"
+  end
+
+  config.merge!({
+    "verify_outgoing" => true,
+    "verify_incoming" => true,
+    "verify_server_hostname" => true,
+    "ca_file" => "#{certs_dir}/ca.crt",
+    "key_file" => key_file,
+    "cert_file" => cert_file,
+    "encrypt" => p("consul.encrypt_key"),
+  })
+end
 
 if server
   config["bootstrap_expect"] = lan_servers.size
