--- a/jobs/routing-api/templates/routing-api_ctl.erb
+++ b/jobs/routing-api/templates/routing-api_ctl.erb
@@ -48,6 +48,7 @@ case $1 in
          -maxTTL <%= p("routing-api.max_ttl") %> \
          -ip <%= my_ip %> \
          -systemDomain <%= p("system_domain") %> \
+         -devMode <%= p("routing-api.auth_disabled") %> \
          <%= p("etcd.machines").map{|addr| "http://#{addr}:4001"}.join(" ")%> \
          1> >(tee -a $LOG_DIR/routing-api.log | logger -t vcap.routing-api) 2>&1
 
