Support unencoded secrets for route services
[#105791066]

Signed-off-by: Yu Zhang <atomhust@gmail.com>

--- a/spec/fixtures/warden/cf-manifest.yml.erb
+++ b/spec/fixtures/warden/cf-manifest.yml.erb
@@ -2926,7 +2926,7 @@ properties:
       user: router
     secure_cookies: null
     route_service_timeout: null
-    route_services_secret: emc1Bu39coo4mcz+iaecPAL2wCeo4VB1+6s099ZYu/M=
+    route_services_secret: route-services-secret
     route_services_secret_decrypt_only: null
   smoke_tests:
     api: api.bosh-lite.com
